--- a/resources/sass/graymatter/components/centa-cells.scss
+++ b/resources/sass/graymatter/components/centa-cells.scss
@@ -11,7 +11,7 @@
   display: block;
   padding: 10px;
   width: 100%;
-  word-wrap: break-word;
+  word-wrap: normal;
 }
 .x90 {
   @media only screen and (min-width: $break) {
