--- a/resources/sass/graymatter/components/text.scss
+++ b/resources/sass/graymatter/components/text.scss
@@ -17,4 +17,5 @@
 
 .giant {
   font-size: $fs-giant;
+  line-height: $lh-giant;
 }
