--- a/resources/sass/graymatter/components/variables.scss
+++ b/resources/sass/graymatter/components/variables.scss
@@ -10,7 +10,7 @@ $lh-base: 1.6rem;
 $lh-big: 1.8rem;
 $lh-bigger: 2rem;
 $lh-biggest: 2.3rem;
-$lh-giant: 3rem;
+$lh-giant: 6.2rem;
 
 // Colors
 $blue: #3490dc;
